# confpiler

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  release.yaml  test.yaml
ci/: ubuntu-install-packages  vars.yaml
confpiler/: CHANGELOG.md  Cargo.toml  README.md
confpiler/examples/basic/: main.rs
confpiler/examples/basic/config/: default.yaml  production.yaml
confpiler/src/: config.rs  error.rs  lib.rs
confpiler/tests/: integration_tests.rs
confpiler/tests/fixtures/: duplicate_key.yaml  file_one.yaml  file_three.toml  file_three_warnings.toml  file_two.yaml  file_two_warnings.yaml  invalid_array.yaml
confpiler_cli/: CHANGELOG.md  Cargo.toml  README.md
confpiler_cli/src/: cli.rs  main.rs
confpiler_cli/tests/: cli_extra.rs  cli_integration.rs
confpiler_cli/tests/fixtures/: global_default.yaml  special_chars.yaml
confpiler_cli/tests/fixtures/conf_dir/: default.yaml  development.yaml  production.yaml  staging.yaml
confpiler_cli/tests/golden/complex/: build_output.json  build_output.txt  check_strict_output.txt
confpiler_cli/tests/golden/customized/: build_output.json  build_output.txt  build_strict_output.txt
confpiler_cli/tests/golden/errors/: build_output.txt  check_output.txt
confpiler_cli/tests/golden/no_matching_env/: build_output.json  build_output.txt
confpiler_cli/tests/golden/raw/: build_output.txt
confpiler_cli/tests/golden/shell_escaping/: build_output.json  build_output.txt
confpiler_cli/tests/golden/simple/: build_output.json  build_output.txt
confpiler_cli/tests/golden/warnings/: build_output.json  build_output.txt  build_strict_output.txt  check_output.txt  check_strict_output.txt
