[package]
name = "confpiler"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A configuration \"compiler\" to aid in turning configuration file(s) into environment variables."
readme = "README.md"
homepage = "https://github.com/mattcl/confpiler"
repository = "https://github.com/mattcl/confpiler"
categories = ["config"]

[dependencies]
config = "0.12"
