[package]
name = "confpiler_cli"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A configuration \"compiler\" and exporter"
readme = "README.md"
homepage = "https://github.com/mattcl/confpiler"
repository = "https://github.com/mattcl/confpiler"
categories = ["command-line-utilities", "config"]
exclude = ["/tests"]

[[bin]]
name = "confpiler"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.2", features = ["derive"] }
confpiler = { version = "^0.2.1", path = "../confpiler" }
self_update = { version = "0.29", features = ["archive-tar", "compression-flate2"] }
serde_json = "1.0"
snailquote = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
