[package]
name = "confpiler_cli"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
version = "0.4.3"
edition = "2021"
rust-version = "1.58"
license = "MIT OR Apache-2.0"
description = "A configuration \"compiler\" and exporter"
readme = "README.md"
homepage = "https://github.com/mattcl/confpiler"
repository = "https://github.com/mattcl/confpiler"
categories = ["command-line-utilities", "config"]
exclude = ["/tests"]

[[bin]]
name = "confpiler"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.2", features = ["derive"] }
confpiler = { version = "^0.2.2", path = "../confpiler" }
self_update = { version = "0.29", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
serde_json = "1.0"
snailquote = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
